Fix spacing Feature section LG above

--- a/src/app/views/landing-page/features-section/features-section.component.scss
+++ b/src/app/views/landing-page/features-section/features-section.component.scss
@@ -21,6 +21,7 @@
             flex: 1;
             display: flex;
             flex-direction: row;
+            justify-content: center;
 
             .stat-icon-container {
                 width: 42px;
